# cmake-samples

head-only-lib/: CMakeLists.txt  main.cpp
head-only-lib/include/head_onlys/: utils.hpp
